<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sbpref="http://schemas.android.com/apk/res/com.brokenpipe.btcircuit24.seekbarpreference">

    <CheckBoxPreference
        android:key="limit_power"
        android:title="@string/pref_title_enable_power_limitation"
        android:summary="@string/pref_description_power_limitation"
        android:defaultValue="false" />

    <com.brokenpipe.btcircuit24.SeekBarPreference
        android:key="max_power_value"
        android:title="@string/pref_title_max_power"
        android:dialogTitle="@string/pref_max_power_dialog_title"
        android:summary="@string/pref_max_power_dialog_summary"
        android:persistent="true"
        android:defaultValue="100"/>

    <CheckBoxPreference
        android:key="enable_boost_button"
        android:title="@string/pref_title_enable_boot_button"
        android:summary="@string/pref_description_boost_button"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="enable_reverse_button"
        android:title="@string/pref_title_enable_reverse_button"
        android:summary="@string/pref_description_reverse_button"
        android:defaultValue="true" />
</PreferenceScreen>
