<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DEVICE_LIST_ACTIVITY_PAIRED_TITLE"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <ListView android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_below="@+id/title_paired_devices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DEVICE_LIST_ACTIVITY_FOUND_TITLE"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        android:layout_below="@+id/paired_devices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <ListView android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:layout_below="@+id/title_new_devices"
        android:layout_above="@+id/button_scan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <Button android:id="@+id/button_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/DEVICE_LIST_ACTIVITY_SCAN_BUTTON"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>